--- a/index.html
+++ b/index.html
@@ -1,10 +1,3 @@
-<?php
-  session_start();
-
-  if(isset($_SESSION['id']))
-    header("location: principal.php");
-?>
-
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -20,7 +13,7 @@
 
 			  var login = Ext.create('Ext.FormPanel', {
 				  labelWidth	 : 50,
-				  url			 : 'http://localhost/una/php/login.php?acao=login',
+				  url			 : 'backend/login',
 				  frame		 : true,
 				  defaultType  : 'textfield',
 				  monitorValid : true,
@@ -69,7 +62,7 @@
 				  if(login.getForm().isValid())
 				  {
 					  login.getForm().submit({
-						  method 		: 'POST',
+						  method 		: 'GET',
 						  waitTitle 	: 'Por favor, aguarde !!!',
 						  waitMsg 	: 'Autenticado no sistema ',
 						  success     : function(){
